--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,15 @@
 
 # testing
 /coverage
+# api key
+apikey.js
 
 # production
 /build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
